fix layout; add align-items property to body for improved alignment

--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ body
 {
     width:100%;
     margin:auto;
+    align-items: center;
 }
 .project-grid
 {
